# aemon

./: IMPROVEMENTS.md  MANIFEST.in  Makefile  README.md  aemon.example.yaml  aemon.yaml  example_app.py  pyproject.toml
.github/workflows/: ci.yaml
aemon/: cli.py
aemon/cli/: main.py
aemon/config/: loader.py
aemon/core/: command.py  dispatcher.py  exceptions.py  fast_api_loader.py  generator.py
aemon/output/: html_generator.py
aemon/parser/: dto.py  parser.py
docs/: index.html
docs/api/v1/: api_config.json  api_config.yaml  index.html  metadata.json
docs/api/v2/: api_config.json  api_config.yaml  index.html  metadata.json
tests/: test_enhanced.py
tests/unit/: test_cli.py
