[project]
name = "aemon"
version = "0.1.0"
description = "A CLI tool for generating open API spec"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
aemon = "aemon.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
